<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintRight_toLeftOf="@id/layout2"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".5" >

        <TextView
            android:id="@+id/enterSymbol"
            android:layout_width="0dp"
            android:layout_height="@dimen/titleHeight"
            android:layout_weight="1"
            android:text="@string/enterName"
            android:textSize="@dimen/titleTextSize"
            android:gravity="center_vertical|end"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/symbol"
            android:layout_width="match_parent"
            android:layout_height="@dimen/viewHeight"
            android:text="@string/symbol"
            android:textSize="@dimen/textSize"
            android:gravity="center_vertical|end"

            app:layout_constraintTop_toBottomOf="@id/enterSymbol"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"

            />
        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/viewHeight"
            android:text="@string/name"
            android:textSize="@dimen/textSize"
            android:gravity="center_vertical|end"
            app:layout_constraintTop_toBottomOf="@id/symbol"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"

            />
        <TextView
            android:id="@+id/lastTradePrice"
            android:layout_width="match_parent"
            android:layout_height="@dimen/viewHeight"
            android:text="@string/lastTradePrice"
            android:textSize="@dimen/textSize"
            android:gravity="center_vertical|end"
            app:layout_constraintTop_toBottomOf="@id/name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"

            />
        <TextView
            android:id="@+id/lastTradeTime"
            android:layout_width="match_parent"
            android:layout_height="@dimen/viewHeight"
            android:text="@string/lastTradeTime"
            android:textSize="@dimen/textSize"
            android:gravity="center_vertical|end"
            app:layout_constraintTop_toBottomOf="@id/lastTradePrice"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"

            />
        <TextView
            android:id="@+id/change"
            android:layout_width="match_parent"
            android:layout_height="@dimen/viewHeight"
            android:text="@string/change"
            android:textSize="@dimen/textSize"
            android:gravity="center_vertical|end"
            app:layout_constraintTop_toBottomOf="@id/lastTradeTime"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"

            />
        <TextView
            android:id="@+id/range"
            android:layout_width="match_parent"
            android:layout_height="@dimen/viewHeight"
            android:text="@string/range"
            android:textSize="@dimen/textSize"
            android:gravity="center_vertical|end"

            app:layout_constraintTop_toBottomOf="@id/change"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"

            />




    </androidx.constraintlayout.widget.ConstraintLayout>




    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout2"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintLeft_toRightOf="@id/layout1"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".5" >

        <EditText
            android:id="@+id/symbolEntry"
            android:layout_width="0dp"
            android:layout_height="@dimen/titleHeight"
            android:layout_weight="1"
            android:text=""
            android:textSize="@dimen/titleTextSize"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

        <TextView
            android:id="@+id/fetchSymbol"
            android:layout_width="match_parent"
            android:layout_height="@dimen/viewHeight"
            android:text=""
            android:textSize="@dimen/textSize"
            android:gravity="center_vertical|start"
            app:layout_constraintTop_toBottomOf="@id/symbolEntry"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"

            />
        <TextView
            android:id="@+id/fetchName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/viewHeight"
            android:text=""
            android:textSize="@dimen/textSize"
            android:gravity="center_vertical|start"
            app:layout_constraintTop_toBottomOf="@id/fetchSymbol"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"

            />
        <TextView
            android:id="@+id/fetchLastTradePrice"
            android:layout_width="match_parent"
            android:layout_height="@dimen/viewHeight"
            android:text=""
            android:textSize="@dimen/textSize"
            android:gravity="center_vertical|start"
            app:layout_constraintTop_toBottomOf="@id/fetchName"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"

            />
        <TextView
            android:id="@+id/fetchLastTradeTime"
            android:layout_width="match_parent"
            android:layout_height="@dimen/viewHeight"
            android:text=""
            android:textSize="@dimen/textSize"
            android:gravity="center_vertical|start"
            app:layout_constraintTop_toBottomOf="@id/fetchLastTradePrice"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"

            />
        <TextView
            android:id="@+id/fetchChange"
            android:layout_width="match_parent"
            android:layout_height="@dimen/viewHeight"
            android:text=""
            android:textSize="@dimen/textSize"
            android:gravity="center_vertical|start"
            app:layout_constraintTop_toBottomOf="@id/fetchLastTradeTime"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"

            />
        <TextView
            android:id="@+id/fetchRange"
            android:layout_width="match_parent"
            android:layout_height="@dimen/viewHeight"
            android:text=""
            android:textSize="@dimen/textSize"
            android:gravity="center_vertical|start"

            app:layout_constraintTop_toBottomOf="@id/fetchChange"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"

            />





    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>